--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,35 @@
+#root {
+  background-color: rgb(32, 31, 31);
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
+  width: 100%;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  min-height: 100vh;
+  margin: 0 auto;
+  max-width: 900px;
+  border-radius: 25px;
 }
 
-.App-link {
-  color: #61dafb;
+.carrousel {
+  cursor: grab;
+  overflow: hidden;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.inner {
+  display: flex;
+  gap: 15px;
+}
+
+.item {
+  min-height: 200px;
+  min-width: 400px;
+}
+
+.item img {
+  width: 100%;
+  pointer-events: none;
+  border-radius: 25px;
 }
